--- a/banco-app/src/app/pages/home/typography/typography.component.html
+++ b/banco-app/src/app/pages/home/typography/typography.component.html
@@ -1,95 +1,97 @@
 <div class="main-content">
-<div class="container-fluid">
-    <div class="row">
-        <div class="col-md-12">
-            <div class="card">
-                <div class="card-header" data-background-color="red">
-                    <h4 class="title">Material Dashboard Heading</h4>
-                    <p class="category">Created using Roboto Font Family</p>
-                </div>
-                <div class="card-content">
-                    <div id="typography">
-                        <div class="title">
-                            <h2>Typography</h2>
-                        </div>
-                        <div class="row">
-                            <div class="tim-typo">
-                                <h1><span class="tim-note">Header 1</span>The Life of Material Dashboard </h1>
-                            </div>
-                            <div class="tim-typo">
-                                <h2><span class="tim-note">Header 2</span>The life of Material Dashboard </h2>
-                            </div>
-                            <div class="tim-typo">
-                                <h3><span class="tim-note">Header 3</span>The life of Material Dashboard </h3>
-                            </div>
-                            <div class="tim-typo">
-                                <h4><span class="tim-note">Header 4</span>The life of Material Dashboard </h4>
-                            </div>
-                            <div class="tim-typo">
-                                <h5><span class="tim-note">Header 5</span>The life of Material Dashboard </h5>
-                            </div>
-                            <div class="tim-typo">
-                                <h6><span class="tim-note">Header 6</span>The life of Material Dashboard </h6>
-                            </div>
-                            <div class="tim-typo">
-                                <p><span class="tim-note">Paragraph</span>
-                                    I will be the leader of a company that ends up being worth billions of dollars, because I got the answers. I understand culture. I am the nucleus. I think that’s a responsibility that I have, to push possibilities, to show people, this is the level that things could be at.</p>
-                            </div>
-                            <div class="tim-typo">
-                                <span class="tim-note">Quote</span>
-                                <blockquote>
-                                 <p>
-                                 I will be the leader of a company that ends up being worth billions of dollars, because I got the answers. I understand culture. I am the nucleus. I think that’s a responsibility that I have, to push possibilities, to show people, this is the level that things could be at.
-                                 </p>
-                                 <small>
-                                 Kanye West, Musician
-                                 </small>
-                                </blockquote>
-                            </div>
+    <div class="container-fluid">
+        <div class="row">
+            <div class="col-md-12">
+                <div class="card">
+                    <div class="card-header" data-background-color="red">
+                        <h4 class="title">Client Table</h4>
+                        <p class="category">A list of Bank's Clients (both Fisical or Juridice)</p>
+                    </div>
+                    <div class="card-content table-responsive">
+                        <table class="table">
+                            <thead class="text-danger">
+                                <tr>
+                                    <th>Name</th>
+                                    <th>endereco</th>
+                                    <th>Data de Cadastro</th>
+                                </tr>
+                            </thead>
+                            <tbody>
+                                <tr *ngFor = "let post of clientsArray">
+                                    <td>{{post.nome}}</td>
+                                    <td>{{post.endereco}}</td>
+                                    <td>{{post.cadastroDatetime}}</td>
+                                </tr>
+                            </tbody>
+                            </table>
 
-                            <div class="tim-typo">
-                                <span class="tim-note">Muted Text</span>
-                                <p class="text-muted">
-                                I will be the leader of a company that ends up being worth billions of dollars, because I got the answers...
-                                </p>
-                            </div>
-                            <div class="tim-typo">
-                                <span class="tim-note">Primary Text</span>
-                                <p class="text-primary">
-                                I will be the leader of a company that ends up being worth billions of dollars, because I got the answers...                        </p>
-                            </div>
-                            <div class="tim-typo">
-                                <span class="tim-note">Info Text</span>
-                                <p class="text-info">
-                                I will be the leader of a company that ends up being worth billions of dollars, because I got the answers...                        </p>
-                            </div>
-                            <div class="tim-typo">
-                                <span class="tim-note">Success Text</span>
-                                <p class="text-success">
-                                I will be the leader of a company that ends up being worth billions of dollars, because I got the answers...                        </p>
-                            </div>
-                            <div class="tim-typo">
-                                <span class="tim-note">Warning Text</span>
-                                <p class="text-warning">
-                                I will be the leader of a company that ends up being worth billions of dollars, because I got the answers...
-                                </p>
-                            </div>
-                            <div class="tim-typo">
-                                <span class="tim-note">Danger Text</span>
-                                <p class="text-danger">
-                                I will be the leader of a company that ends up being worth billions of dollars, because I got the answers...                        </p>
-                            </div>
-                            <div class="tim-typo">
-                                <h2><span class="tim-note">Small Tag</span>
-                                    Header with small subtitle <br>
-                                    <small>Use "small" tag for the headers</small>
-                                </h2>
-                            </div>
-                        </div>
+                    </div>
+                </div>
+            </div>
+
+            <div class="col-md-12">
+                <div class="card card-plain">
+                    <div class="card-header" data-background-color="red">
+                        <h4 class="title">Table on Plain Background</h4>
+                        <p class="category">Here is a subtitle for this table</p>
+                    </div>
+                    <div class="card-content table-responsive">
+                        <table class="table table-hover">
+                            <thead>
+                                <tr>
+                                    <th>ID</th>
+                                    <th>Name</th>
+                                    <th>Adress</th>
+                                </tr>
+                            </thead>
+                            <tbody>
+                                <tr *ngFor = "let post of _postArray">
+                                    <td>{{post.id}}</td>
+                                    <td>{{post.name}}</td>
+                                    <td>{{post.adress}}</td>
+                                    <td>{{post.date}}</td>
+                                    <td>Oud-Turnhout</td>
+                                </tr>
+                                <tr>
+                                    <td>2</td>
+                                    <td>Minerva Hooper</td>
+                                    <td>$23,789</td>
+                                    <td>Curaçao</td>
+                                    <td>Sinaai-Waas</td>
+                                </tr>
+                                <tr>
+                                    <td>3</td>
+                                    <td>Sage Rodriguez</td>
+                                    <td>$56,142</td>
+                                    <td>Netherlands</td>
+                                    <td>Baileux</td>
+                                </tr>
+                                <tr>
+                                    <td>4</td>
+                                    <td>Philip Chaney</td>
+                                    <td>$38,735</td>
+                                    <td>Korea, South</td>
+                                    <td>Overland Park</td>
+                                </tr>
+                                <tr>
+                                    <td>5</td>
+                                    <td>Doris Greene</td>
+                                    <td>$63,542</td>
+                                    <td>Malawi</td>
+                                    <td>Feldkirchen in Kärnten</td>
+                                </tr>
+                                <tr>
+                                    <td>6</td>
+                                    <td>Mason Porter</td>
+                                    <td>$78,615</td>
+                                    <td>Chile</td>
+                                    <td>Gloucester</td>
+                                </tr>
+                            </tbody>
+                        </table>
                     </div>
                 </div>
             </div>
         </div>
     </div>
-</div>
 </div>
