--- a/banco-app/src/app/components/footer/footer.component.html
+++ b/banco-app/src/app/components/footer/footer.component.html
@@ -25,7 +25,7 @@
             </ul>
         </nav>
         <p class="copyright pull-right">
-            &copy; {{test | date: 'yyyy'}} <a href="http://www.creative-tim.com">João, Luiz, Matheus, Pedro</a>, bank's crud system
+            &copy; {{test | date: 'yyyy'}} <a href="http://www.creative-tim.com">João</a>, bank's crud system
         </p>
     </div>
 </footer>
