--- a/banco-app/src/app/pages/home/table-list/table-list.component.html
+++ b/banco-app/src/app/pages/home/table-list/table-list.component.html
@@ -1,6 +1,5 @@
 <div class="main-content">
 
-
     <div class="container-fluid">
 
         <div class="container-fluid pull-left">
@@ -18,100 +17,102 @@
         <div class="row">
             <div class="col-md-12">
 
-                <div class="card">
+                <div #cardTable class="card">
                     <div class="card-header" data-background-color="red">
                         <h4 class="title">Lista Clientes</h4>
                         <p class="category">Lista de clientes(físicos e jurídicos) </p>
                     </div>
                     <div class="card-content table-responsive">
-                        <table class="table">
+                        <table class="table  table-striped">
                             <thead class="text-danger">
                                 <tr>
                                     <th>Name</th>
-                                    <th>endereco</th>
-                                    <th>Data de Cadastro</th>
+                                    <th>rua</th>
+                                    <th>cidade</th>
+                                    <th>estado</th>
+                                    <th>funcionario resp</th>
                                 </tr>
                             </thead>
                             <tbody>
-                                <tr *ngFor="let post of clientsArray">
-                                    <td>{{post.nome}}</td>
-                                    <td>{{post.endereco}}</td>
-                                    <td>{{post.cadastroDatetime}}</td>
+                                <tr *ngFor="let post of clientsArray ">
+
                                     <td>
-                                        <button type="submit" class="btn btn-danger pull-left"><i class="material-icons">update</i></button>
-                                        <button type="submit" class="btn btn-danger pull-left"><i class="material-icons">delete</i></button>
+                                        <input type="text" class="form-control" ng-model="post.nome" value={{post.nome}} readonly/> 
                                     </td>
+
+                                    <td>
+                                        <input type="text" class="form-control" ng-model="post.rua_mora" value={{post.rua_mora}} readonly/>
+                                    </td>
+                                    <td>
+                                        <input type="text" class="form-control" ng-model="post.cidade_mora" value={{post.cidade_mora}} readonly/>
+                                    </td>
+                                    <td>
+                                        <input type="text" class="form-control" ng-model="post.estado_mora" value={{post.estado_mora}} readonly/>
+                                    </td>
+                                    <td>
+                                        <input type="text" class="form-control" ng-model="post.funcionario_cadastrou" value={{post.cidade_mora}} readonly/>
+                                    </td>
+                                    <td>
+                                        <button class="btn btn-danger pull-left" type="submit" (click)="onClick(post,updateCliente)">
+                                            <i class="material-icons">update</i>
+                                        </button>
+
+                                        <button class="btn btn-danger pull-left" (click) = deleteCliente(post)>
+                                            <i class="material-icons">delete</i>
+                                        </button>
+
+                                    </td>
+
+
                                 </tr>
                             </tbody>
                         </table>
 
-                    </div>
-                </div>
-            </div>
-
-            <div class="col-md-12">
-                <div class="card card-plain">
-                    <div class="card-header" data-background-color="red">
-                        <h4 class="title">Table on Plain Background</h4>
-                        <p class="category">Here is a subtitle for this table</p>
-                    </div>
-                    <div class="card-content table-responsive">
-                        <table class="table table-hover">
-                            <thead>
-                                <tr>
-                                    <th>ID</th>
-                                    <th>Name</th>
-                                    <th>Adress</th>
-                                </tr>
-                            </thead>
-                            <tbody>
-                                <tr *ngFor="let post of _postArray">
-                                    <td>{{post.id}}</td>
-                                    <td>{{post.name}}</td>
-                                    <td>{{post.adress}}</td>
-                                    <td>{{post.date}}</td>
-                                    <td>Oud-Turnhout</td>
-                                </tr>
-                                <tr>
-                                    <td>2</td>
-                                    <td>Minerva Hooper</td>
-                                    <td>$23,789</td>
-                                    <td>Curaçao</td>
-                                    <td>Sinaai-Waas</td>
-                                </tr>
-                                <tr>
-                                    <td>3</td>
-                                    <td>Sage Rodriguez</td>
-                                    <td>$56,142</td>
-                                    <td>Netherlands</td>
-                                    <td>Baileux</td>
-                                </tr>
-                                <tr>
-                                    <td>4</td>
-                                    <td>Philip Chaney</td>
-                                    <td>$38,735</td>
-                                    <td>Korea, South</td>
-                                    <td>Overland Park</td>
-                                </tr>
-                                <tr>
-                                    <td>5</td>
-                                    <td>Doris Greene</td>
-                                    <td>$63,542</td>
-                                    <td>Malawi</td>
-                                    <td>Feldkirchen in Kärnten</td>
-                                </tr>
-                                <tr>
-                                    <td>6</td>
-                                    <td>Mason Porter</td>
-                                    <td>$78,615</td>
-                                    <td>Chile</td>
-                                    <td>Gloucester</td>
-                                </tr>
-                            </tbody>
-                        </table>
                     </div>
                 </div>
             </div>
         </div>
     </div>
+    <div #updateCliente class="container-fluid">
+        <div class="row">
+            <div class="col-md-8">
+                <div class="card">
+                    <div class="card-header" data-background-color="red">
+                        <h4 class="title">Novo Cliente</h4>
+                        <p class="category">Complete os campos </p>
+                        {{model.nome}}
+                    </div>
+                    <div class="card-content">
+                        <form #novoCliente="ngForm">
+                            <div class="row">
+
+                                <div class="col-md-3">
+                                    <div class="form-group form-black label-floating is-empty">
+                                        <input [(ngModel)]="model.nome" name="nome" type="text" class="form-control" required>
+                                    </div>
+                                </div>
+                                <div class="col-md-4">
+                                    <div class="form-group form-black label-floating is-empty">
+                                        <input [(ngModel)]="model.rua_mora" name="rua_mora" type="text" class="form-control" required>
+                                    </div>
+                                </div>
+                                <div class="col-md-4">
+                                    <div class="form-group form-black label-floating is-empty">
+                                        <input [(ngModel)]="model.cidade_mora" name="cidade_mora" type="text" class="form-control" required>
+                                    </div>
+                                </div>
+                                <div class="col-md-4">
+                                    <div class="form-group form-black label-floating is-empty">
+                                        <input [(ngModel)]="model.estado_mora" name="estado_mora" type="text" class="form-control" required>
+                                    </div>
+                                </div>
+                            </div>
+                            <button type="submit" class="btn btn-danger pull-right" (click)="putCliente(model,cardTable)">Atualizar Cliente</button>
+                        </form>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </div>
+
 </div>
