corrigido erros pt

--- a/banco-app/src/app/pages/home/novo-administrador-form/novo-administrador-form.component.html
+++ b/banco-app/src/app/pages/home/novo-administrador-form/novo-administrador-form.component.html
@@ -4,7 +4,7 @@
       <div class="col-md-8">
         <div class="card">
           <div class="card-header" data-background-color="red">
-            <h4 class="title">Novo Funcionario</h4>
+            <h4 class="title">Novo Administrador</h4>
             <p class="category">Complete os campos </p>
             {{model.nome}}
           </div>
